--- a/style.css
+++ b/style.css
@@ -1,10 +1,34 @@
-ul.answer-list {
-    list-style-type: disc;
-    padding-left: 24px;
-    margin: 0 0 20px 0;
+body {
+    background: #001e4d;
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 20px;
 }
 
-ul.answer-list li {
+.app {
+    background: #fff;
+    width: 90%;
+    max-width: 600px;
+    margin: 80px auto 0;
+    border-radius: 10px;
+    padding: 30px;
+}
+
+.app h1 {
+    font-size: 25px;
+    color: #001e4d;
+    font-weight: 600;
+    border-bottom: 1px solid #333;
+    padding-bottom: 30px;
+    text-align: center;
+}
+
+#answer-buttons {
+    list-style-type: disc;
+    padding-left: 20px;
+}
+
+#answer-buttons li {
     background: #fff;
     color: #222;
     font-weight: 500;
@@ -16,17 +40,25 @@ ul.answer-list li {
     transition: all 0.3s;
 }
 
-ul.answer-list li.correct {
+#answer-buttons li.correct {
     background: #9aeabc;
-    color: #222;
+    border-color: #009432;
 }
 
-ul.answer-list li.incorrect {
+#answer-buttons li.incorrect {
     background: #ff9393;
-    color: #222;
+    border-color: #ff0000;
 }
 
-ul.answer-list li.disabled {
-    cursor: not-allowed;
-    pointer-events: none;
+#next-btn {
+    background: #001e4d;
+    color: #fff;
+    font-weight: 500;
+    width: 150px;
+    border: 0;
+    padding: 10px;
+    margin: 20px auto 0;
+    border-radius: 4px;
+    cursor: pointer;
+    display: none;
 }
