--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 .app {
     background: #fff;
     width: 90%;
-    max-width: 600px;
+    max-width: 800px;
     margin: 80px auto 0;
     border-radius: 10px;
     padding: 30px;
@@ -21,6 +21,26 @@ body {
     border-bottom: 1px solid #333;
     padding-bottom: 30px;
     text-align: center;
+}
+.quiz-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 15px;
+    margin-top: 20px;
+}
+.manual-btn {
+    background: #fff;
+    color: #222;
+    font-weight: 500;
+    border: 1px solid #222;
+    padding: 15px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+.manual-btn:hover {
+    background: #001e4d;
+    color: #fff;
 }
 
 #answer-buttons {
